<resources>
    <string name="app_name">OneFeed</string>
    <string name="welcome_message">Welcome To OneFeed. Combine all your social networks into one!</string>
    <string name="login_signup_message">Login or Sign Up</string>
    <string name="onefeed_button">Create a OneFeed</string>
    <string name="create_account_header">Create an account to utilize the technology of the future</string>
    <string name="username_placeholder">username</string>
    <string name="password_placeholder">password</string>
    <string name="confirm_password_placeholder">confirm password</string>
    <string name="email_placeholder">email</string>
    <string name="confirm_email_placeholder">confirm email</string>
    <string name="next">Next</string>
    <string name="login_button_text">login</string>
    <string name="profile_header_text">Load in your social networks</string>
    <string name="login_signin_title">Login or Sign Up</string>
    <string name="facebook_app_id">1670514196587643</string>
    <string name="login_signup_text">Login or Sign Up</string>
    <string name="google_signout_btn_text">sign out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    

</resources>
